<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/profile"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/score"
        android:icon="@drawable/progress"
        android:title="@string/score_history"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:title="@string/setting"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about_us"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/Logout"
        android:icon="@drawable/logout"
        android:title="@string/log_out"
        app:showAsAction="never">
    </item>



</menu>