<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Qwizzo"
        app:titleTextColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ToolbarTheme"
        />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/qwizzo"
        android:textAlignment="center"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/test_your_knowledge"
        android:textAlignment="center"
        android:textSize="@android:dimen/config_shapeCornerRadiusXlarge"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tittle"
        app:layout_constraintStart_toStartOf="@+id/tittle"
        app:layout_constraintTop_toBottomOf="@+id/tittle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/start_quiz"
        app:icon="@drawable/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        app:iconTint="@color/black"

        app:cornerRadius="10dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="304dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/central_image_of_app"
        app:layout_constraintEnd_toEndOf="@+id/sub_title"
        app:layout_constraintStart_toStartOf="@+id/sub_title"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:srcCompat="@drawable/centerlogo" />


</androidx.constraintlayout.widget.ConstraintLayout>