<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/quizToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary"
        android:theme="@style/ToolbarTheme"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextQuestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/next"

        app:cornerRadius="2dp"
        app:icon="@drawable/next"
        app:iconTint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/preQuestion"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/preQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/prev"
        app:cornerRadius="2dp"
        app:icon="@drawable/prev"

        app:iconTint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/nextQuestionBtn"
        app:layout_constraintEnd_toStartOf="@+id/nextQuestionBtn"
        app:layout_constraintStart_toStartOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="Question Here"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizToolBar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/tvQuestion"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" >

        <RadioButton
            android:id="@+id/rbOption1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option1" />

        <RadioButton
            android:id="@+id/rbOption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option2" />

        <RadioButton
            android:id="@+id/rbOption3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option3" />

        <RadioButton
            android:id="@+id/rbOption4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option4" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>